[SHELL32] SHFileOperation: Fail elegantly if source doesn't exist (#6318)

Based on KRosUser's dragdropfixpart2.patch.
JIRA issue: CORE-19417, CORE-19211
- Check source file existence.